# invoke-training

./: .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  FLUX_Integration_Plan.md  FLUX_Integration_Summary.md  FLUX_Training_Worker_Summary.md  README.md  Start_training.bat  compose.yaml  config.txt  gradio_gui.py  index.html  mkdocs.yml  new_script.bat  new_script.sh  objects.inv  openapi.json  pyproject.toml  setup_and_run.bat  setup_and_run.sh  sitemap.xml  start-docker.bash  test_worker_integration.py
.github/workflows/: deploy.yaml  test.yaml
concepts/: index.html
concepts/dataset_formats/: index.html
configs/: dpo_lora_refinement_sd_pokemon_1x24gb_example.yaml  dpo_lora_sd_pickapic_1x24gb_example.yaml  finetune_lora_and_ti_sdxl_gnome_1x24gb_example.yaml  finetune_lora_and_ti_sdxl_pokemon_1x24gb_example.yaml  finetune_lora_sd_pokemon_1x8gb_example.yaml  finetune_lora_sd_pokemon_example.yaml  finetune_lora_sdxl_pokemon_1x24gb_example.yaml  finetune_lora_sdxl_pokemon_1x8gb_example.yaml  finetune_lora_sdxl_pokemon_example.yaml  lora_training_example.yaml  sd_lora_pokemon_1x8gb.yaml  sd_textual_inversion_gnome_1x8gb.yaml  sdxl_lora_and_ti_1x24gb.yaml  sdxl_lora_and_ti_gnome_1x24gb.yaml  sdxl_lora_pokemon_1x24gb.yaml  sdxl_lora_pokemon_1x8gb.yaml  sdxl_textual_inversion_gnome_1x24gb.yaml  textual_inversion_sd_gnome_1x8gb_example.yaml  textual_inversion_sdxl_gnome_1x24gb_example.yaml
configs/_experimental/: dpo_lora_refinement_sd_pokemon_1x24gb_example.yaml  dpo_lora_sd_pickapic_1x24gb_example.yaml  sd_dpo_lora_refinement_pokemon_1x24gb.yaml
contributing/development_environment/: index.html
contributing/directory_structure/: index.html
contributing/documentation/: index.html
contributing/tests/: index.html
docker/: compose.yaml
docs/: contributing.md  dataset_formats.md  index.md  the_chosen_one.md
docs/concepts/: dataset_formats.md
docs/contributing/: development_environment.md  directory_structure.md  documentation.md  tests.md
docs/get-started/: installation.md  quick-start-cli.md  quick-start-gui.md  quick-start.md
docs/get_started/: installation.md  quick_start.md
docs/guides/: dataset_formats.md  model_merge.md
docs/guides/stable_diffusion/: gnome_lora_masks_sdxl.md  textual_inversion_sdxl.md
docs/reference/config/: index.md
docs/tutorials/: index.md
docs/tutorials/stable_diffusion/: dpo_lora_sd.md  dreambooth_lora_sd.md  gnome_lora_masks_sdxl.md  lora_sd.md  pivotal_tuning_sd.md  robocats_finetune_sdxl.md  textual_inversion_sd.md  textual_inversion_sdxl.md  the_chosen_one_sd.md
get-started/installation/: index.html
get-started/quick-start/: index.html
get-started/quick-start-cli/: index.html
get-started/quick-start-gui/: index.html
get_started/installation/: index.html
get_started/quick_start/: index.html
guides/dataset_formats/: index.html
guides/model_merge/: index.html
guides/stable_diffusion/dpo_lora_sd/: index.html
guides/stable_diffusion/gnome_lora_masks_sdxl/: index.html
guides/stable_diffusion/robocats_finetune_sdxl/: index.html
guides/stable_diffusion/textual_inversion_sdxl/: index.html
mapo/: README.md  args.py  requirements.txt  train.py  train_with_lora.py  utils.py  validate_lora.py  validation_prompts.json
reference/config/: index.html
sample_data/bruce_the_gnome/: data.jsonl
search/: search_index.json
src/: Flux-scheduler.ipynb  Flux.ipynb  Get-Random-Latent.ipynb  flux_lora.py  flux_lora2.py  test_noise_process.py
src/invoke_training/_shared/: dora_fix.py
src/invoke_training/config/: base_pipeline_config.py  pipeline_config.py
src/invoke_training/lora/: lora_block.py  lora_training.py
src/invoke_training/model_merge/: extract_lora.py  merge_models.py  merge_models_script.py  merge_tasks_to_base.py  merge_ties.py  merger.py
src/invoke_training/pipelines/: callbacks.py  invoke_train.py
src/invoke_training/sample_configs/: TEST.yaml  flux_lora_1x40gb.yaml  flux_lora_1x8gb.yaml  sd_lora_baroque_1x8gb.yaml  sd_textual_inversion_gnome_1x8gb.yaml  sdxl_finetune_baroque_1x24gb.yaml  sdxl_finetune_robocats_1x24gb.yaml  sdxl_lora_and_ti_gnome_1x24gb.yaml  sdxl_lora_and_ti_pokemon_1x24gb.yaml  sdxl_lora_baroque_1x24gb.yaml  sdxl_lora_baroque_1x8gb.yaml  sdxl_lora_masks_gnome_1x24gb.yaml  sdxl_textual_inversion_gnome_1x24gb.yaml  sdxl_textual_inversion_masks_gnome_1x24gb.yaml  worker_flux_lora_example.yaml  worker_sdxl_lora_example.yaml
src/invoke_training/scripts/: cluster_images.py  convert_sd_lora_to_kohya_format.py  generate_dataset.py  invoke_dreambooth_lora_sd.py  invoke_dreambooth_lora_sdxl.py  invoke_finetune_lora_sd.py  invoke_finetune_lora_sdxl.py  invoke_generate_images.py  invoke_textual_inversion_sd.py  invoke_train.py  invoke_train_lora.py  invoke_train_ui.py  invoke_train_worker.py  invoke_visualize_data_loading.py  rank_images.py
src/invoke_training/ui/: app.py  base_pipeline_config_group.py  image_caption_sd_data_loader_config_group.py  index.html  optimizer_config_group.py  pipeline_tab.py  sd_lora_config_group.py  sd_lora_tab.py  ui_config_element.py  utils.py
src/invoke_training/worker/: __init__.py  config_presets.py  presets.py  training_worker.py  worker_api.py
src/paul_mescal_training/: prompts.json
tests/integration_tests/: smoke_test_pipelines.py
tests/invoke_training/lora/: test_lora_block.py  test_lora_training.py  test_utils.py
tests/invoke_training/model_merge/: test_merge_models.py  test_merge_tasks_to_base.py  test_merge_ties.py  test_merger.py  utils.py
training-worker/: README.md  pyproject.toml  test_worker.py
training-worker/examples/: flux_lora_job.json  sdxl_lora_job.json
training-worker/training_worker/: __init__.py  training_worker.py  wrapper.py
training-worker/training_worker/config_presets/: __init__.py  commercial_config.py  config_presets.py
tutorials/: index.html
tutorials/stable_diffusion/dpo_lora_sd/: index.html
tutorials/stable_diffusion/dreambooth_lora_sd/: index.html
tutorials/stable_diffusion/finetune_lora_sd/: index.html
tutorials/stable_diffusion/lora_sd/: index.html
(+457 files in other folders)
