[project]
name = "training-worker"
version = "0.2.0"
description = "Training worker for distributed AI model training with FLUX and SDXL support"
authors = [
    {name = "Your Organization", email = "team@yourorganization.com"},
]
dependencies = [
    "invoke-training>=2.0.0",  # Updated to version with FLUX support
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "boto3>=1.26.0",
    "requests>=2.28.0",
    "psutil>=5.9.0",
    "accelerate>=0.20.0",
    "transformers>=4.30.0",
    "diffusers>=0.25.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "datasets>=2.12.0",
    "pillow>=9.5.0",
    "numpy>=1.24.0",
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["training_worker*"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py310"